--- a/view/users/register.ejs
+++ b/view/users/register.ejs
@@ -58,7 +58,7 @@
             <div class="form-box">                            
                 <form class="hidden loginForm" id="loginForm" method="post" action="http://localhost:8080/shopcard/authenticate/login">
                     <h2>🔐 Login</h2>
-                    <input type="text" name="user[username]" placeholder="Username" required autocomplete="username">
+                    <input type="text" name="user[username]" placeholder="Enter Email or Username" required autocomplete="username">
                     <div class="passwordBox"> 
                          <input type="password" name="user[password]" id="loginPassword" placeholder="Password" required autocomplete="current-password">
                          <i class="fa-solid fa-eye-slash" id="loginEyeIcon"></i>
