--- a/view/listings/watchlist.ejs
+++ b/view/listings/watchlist.ejs
@@ -1,85 +1,204 @@
-<%-layout("layouts/boilerPlateCode.ejs")%>
-<div class="watchlist-main-container" >
+<%- layout("layouts/boilerPlateCode.ejs") %>
 
-  <div class="watchlist-user-account-info">
-    <div class="watchlist-user-account-box">
-        <div class="watchlist-user-imagebox">
-            <img src="<%=user.image.url %>" alt="">
-        </div>
-        <div class="wtc-user-bio">
-            <h4>Hello <%=user.name %> </h4>
-        </div>
-    </div>
-    <div class="watchlist-user-order-box">
-        <i class="fa-solid fa-boxes-packing"></i>
-        <p>My Orders</p>
-    </div>
-    <div class="watchlist-user-coupons-box">
-           <i class="fa-solid fa-ticket"></i>
-           <p>My Coupons</p>
-    </div>
-    <div class="watchlist-user-notification">
-        <i class="fa-solid fa-bell"></i>
-        <p>All Notification</p>
-    </div>
-   </div>
-  <div class="watchlist-user-product-main-box">
+<div class="watchlist-main-container">
+  <!-- Left Sidebar -->
+  <aside class="watchlist-user-products-checkoutMain">
 
+    <div class="watchlist-checkout-head">
+      <h5>Price Details</h5>
+      <hr>
+    </div> 
+    <div class="watchlist-product-details-checkout-m">
+      <div class="watchlist-checkout-allproduct-totalprice watchlist-checkout-product-list">
+        <div class="watchlist-checkout-allproduct-totalprice-left watchlist-checkout-product-left-list ">
+          <span class="watchlist-checkout-items-title" >Price</span>
+          <span id="watchlist-checkout-total-productCount"> (6 Items) </span>
+          <span class="material-symbols-outlined  watchlist-checkout-item-icon ">priority</span>
+        </div>
+        <p class="watchlist-checkout-allproduct-totalprice-right">
+          ₹ 1,136,788
+        </p>
+      </div>
+      <div class="watchlist-checkout-allproduct-discount watchlist-checkout-product-list">
+        <div class="watchlist-checkout-allproduct-discount-left watchlist-checkout-product-left-list">
+
+          <span class="watchlist-checkout-items-title" >Discount</span>
+          <span class="material-symbols-outlined watchlist-checkout-item-icon">priority</span>
+        </div>
+        <p class="watchlist-checkout-allproduct-discount-right">-15,467</p>
+      </div>
+      <div class="watchlist-checkout-allproduct-coupons watchlist-checkout-product-list">
+        <div class="watchlist-checkout-allproduct-coupons-left watchlist-checkout-product-left-list">
+          <span class="watchlist-checkout-items-title" >Coupons for you</span>
+          <span class="material-symbols-outlined watchlist-checkout-item-icon">priority</span>
+        </div>
+        <p class="watchlist-checkout-allproduct-coupons-right">-302</p>
+      </div>
+      <div class="watchlist-checkout-platform-fee watchlist-checkout-product-list">
+        <div class="watchlist-checkout-platform-fee-left watchlist-checkout-product-left-list">
+          <span class="watchlist-checkout-items-title" >Protect Promise Fee</span>
+          <span class="material-symbols-outlined watchlist-checkout-item-icon">priority</span>
+        </div>
+        <p class="watchlist-checkout-platform-fee-right">₹ 149</p>  
+      </div>
+    </div>  
+    <div class="watchlist-checkout-footer">
+      <hr>
+      <div class="watchlist-checkout-footer-item-total">
+        <span>Total Ammount</span>
+        <span id="watchlist-checkout-footer-item-totalPrice" >1,54,235</span>
+      </div>
+      <hr>
+      <p>You will save <span id="watchlist-checkout-you-save"></span> on this order</p>
+    </div>  
+  </aside>
+
+  <!-- Center Scrollable Section -->
+  <section class="watchlist-user-product-main-box">
     <div class="watchlist-product-main-head">
-        <h3>My WatchList Products</h3>
+      <div class="watchlist-product-address-head">
+        <p>Deliver to : </p>
+        <h3>Badaun - 243601</h3>
+      </div>
+      <div class="watchlist-product-change-address-box">
+        <button id="watchlist-product-change-address-btn">
+          <span class="material-symbols-outlined">change_circle</span>
+          <span>Change</span>
+        </button>
+      
+        <div class="watchlist-address-change-main-box" id="addressBox">
+          <!-- If No any Address fetched then show a simple message  -->
+
+          
+
+          <div class="watchlist-address-change-header">
+            <p class="watchlist-address-change-head">Select your delivery address</p>
+            <span class="material-symbols-outlined address-box-close-icon" id="closeAddressBox">close</span>
+          </div>
+      
+          <div class="watchlist-address-change-select-main">
+            <!-- No Address Fetched Box -->
+
+           <!-- <div class="watchlist-no-address-main">
+            
+           </div> -->
+
+           <div class="watchlist-all-address-option-box">
+
+            <!-- Address 1 -->
+            <label class="watchlist-address-option">
+              <input type="radio" name="selectedAddress" />
+              <div class="watchlist-address-details">
+                <div class="watchlist-address-top">
+                  <p class="watchlist-address-change-user-name">Jayveer Kumar</p>
+                  <span class="watchlist-address-tag home">Home</span>
+                </div>
+                <p class="pincode">Pincode: 243639</p>
+                <p class="full-address">Village and post risouli, Badaun</p>
+              </div>
+            </label>          
+      
+            <!-- Address 2 -->
+            <label class="watchlist-address-option">
+              <input type="radio" name="selectedAddress" />
+              <div class="watchlist-address-details">
+                <div class="watchlist-address-top">
+                  <p class="watchlist-address-change-user-name">Jayveer Kumar</p>
+                  <span class="watchlist-address-tag office">Office</span>
+                </div>
+                <p class="pincode">Pincode: 243601</p>
+                <p class="full-address">Near Royal agency , dataganj chungi</p>
+              </div>
+            </label>
+            <label class="watchlist-address-option">
+              <input type="radio" name="selectedAddress" />
+              <div class="watchlist-address-details">
+                <div class="watchlist-address-top">
+                  <p class="watchlist-address-change-user-name">Jayveer Kumar</p>
+                  <span class="watchlist-address-tag office">Office</span>
+                </div>
+                <p class="pincode">Pincode: 243601</p>
+                <p class="full-address">Near Royal agency , dataganj chungi</p>
+              </div>
+            </label>
+            <label class="watchlist-address-option">
+              <input type="radio" name="selectedAddress" />
+              <div class="watchlist-address-details">
+                <div class="watchlist-address-top">
+                  <p class="watchlist-address-change-user-name">Jayveer Kumar</p>
+                  <span class="watchlist-address-tag office">Office</span>
+                </div>
+                <p class="pincode">Pincode: 243601</p>
+                <p class="full-address">Near Royal agency , dataganj chungi</p>
+              </div>
+            </label>
+            </div>
+
+          </div>
+      
+          <div class="watchlist-address-change-footer">
+            <p class="watchlist-addrs-cng-headline">
+              Use Your Pincode to check delivery information
+            </p>
+            <div class="watchlist-addrs-chng-pincode-input">
+              <input type="number" name="pincode" class="watchlist-pincode-input" id="pincode" placeholder="Enter Pincode" />
+              <!-- <button class="watchlist-address-pincode-sbmt-btn btn-disable">Submit</button>  -->
+               <button class="watchlist-address-pincode-sbmt-btn btn-disable">
+                <span>Submit</span>
+                <div class="watchlist-address-chnge-loader-box wtc-loader-hidden">
+                  <!-- From Uiverse.io by abrahamcalsin -->
+                  <div class="dot-spinner">
+                    <div class="dot-spinner__dot"></div>
+                    <div class="dot-spinner__dot"></div>
+                    <div class="dot-spinner__dot"></div>
+                    <div class="dot-spinner__dot"></div>
+                    <div class="dot-spinner__dot"></div>
+                    <div class="dot-spinner__dot"></div>
+                    <div class="dot-spinner__dot"></div>
+                    <div class="dot-spinner__dot"></div>
+                  </div>
+                </div>
+               </button>
+            </div>
+          </div>
+
+        </div>
+</div>
+    
     </div>
 
- <%  for(let product of userLikedProduct){ %>
-    <a href="/shopcard/<%=product._id%>" class="watchlist-product-link-in-view" >
-    <div class="watchlist-user-product-box">
-        <div class="watchlist-user-product-image">
-            <img src="<%=product.image[0] %>" alt="">
-        </div>
-        <div class="watchlist-user-product-description-with-delete-btn">
-            <div class="watchlist-user-product-description">
-                <p class="watchlist-user-product-title" ><%=product.description %></p>
-                <p class="watchlist-user-product-brand" ><b><%=product.Brand %></b></p>
-                <p class="watchlist-user-product-price-main" >  <span class="watchlist-user-product-price" > <%=product.prize %>  </span> <span class="watchlist-user-product-discount" > product Discount </span> <span class="watchlist-user-product-discount-off" > product Discount Off </span> </p>
+    <div class="watchlist-products-container">
+      <% for (let product of userLikedProduct) { %>
+        <a href="/shopcard/<%= product._id %>" class="watchlist-product-link-in-view">
+          <div class="watchlist-user-product-box">
+            <div class="watchlist-user-product-image">
+              <img src="<%= product.image[0] %>" alt="<%= product.title %>">
             </div>
+
+            <div class="watchlist-user-product-description-with-delete-btn">
+              <div class="watchlist-user-product-description">
+                <p class="watchlist-user-product-title"><%= product.description %></p>
+                <p class="watchlist-user-product-brand"><b><%= product.Brand %></b></p>
+                <p class="watchlist-user-product-price-main">
+                  <span class="watchlist-user-product-price">₹<%= product.prize %></span>
+                  <span class="watchlist-user-product-discount">100</span>
+                  <span class="watchlist-user-product-discount-off">20% off</span>
+                </p>
+              </div>
+
             <div class="watchlist-user-product-deleteBtn">
-                <!--  <i class="fa-solid fa-trash"></i> -->
-                  <!-- New Updated Version Of Delete Btn Start Here-->
-                <!-- From Uiverse.io by vinodjangid07 -->
-                <button class="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 14" class="svgIcon bin-top">
-                        <g clip-path="url(#clip0_35_24)">
-                            <path fill="black"
-                                d="M20.8232 2.62734L19.9948 4.21304C19.8224 4.54309 19.4808 4.75 19.1085 4.75H4.92857C2.20246 4.75 0 6.87266 0 9.5C0 12.1273 2.20246 14.25 4.92857 14.25H64.0714C66.7975 14.25 69 12.1273 69 9.5C69 6.87266 66.7975 4.75 64.0714 4.75H49.8915C49.5192 4.75 49.1776 4.54309 49.0052 4.21305L48.1768 2.62734C47.3451 1.00938 45.6355 0 43.7719 0H25.2281C23.3645 0 21.6549 1.00938 20.8232 2.62734ZM64.0023 20.0648C64.0397 19.4882 63.5822 19 63.0044 19H5.99556C5.4178 19 4.96025 19.4882 4.99766 20.0648L8.19375 69.3203C8.44018 73.0758 11.6746 76 15.5712 76H53.4288C57.3254 76 60.5598 73.0758 60.8062 69.3203L64.0023 20.0648Z">
-                            </path>
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_35_24">
-                                <rect fill="white" height="14" width="69"></rect>
-                            </clipPath>
-                        </defs>
-                    </svg>
-                
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 69 57" class="svgIcon bin-bottom">
-                        <g clip-path="url(#clip0_35_22)">
-                            <path fill="black"
-                                d="M20.8232 -16.3727L19.9948 -14.787C19.8224 -14.4569 19.4808 -14.25 19.1085 -14.25H4.92857C2.20246 -14.25 0 -12.1273 0 -9.5C0 -6.8727 2.20246 -4.75 4.92857 -4.75H64.0714C66.7975 -4.75 69 -6.8727 69 -9.5C69 -12.1273 66.7975 -14.25 64.0714 -14.25H49.8915C49.5192 -14.25 49.1776 -14.4569 49.0052 -14.787L48.1768 -16.3727C47.3451 -17.9906 45.6355 -19 43.7719 -19H25.2281C23.3645 -19 21.6549 -17.9906 20.8232 -16.3727ZM64.0023 1.0648C64.0397 0.4882 63.5822 0 63.0044 0H5.99556C5.4178 0 4.96025 0.4882 4.99766 1.0648L8.19375 50.3203C8.44018 54.0758 11.6746 57 15.5712 57H53.4288C57.3254 57 60.5598 54.0758 60.8062 50.3203L64.0023 1.0648Z">
-                            </path>
-                        </g>
-                        <defs>
-                            <clipPath id="clip0_35_22">
-                                <rect fill="white" height="57" width="69"></rect>
-                            </clipPath>
-                        </defs>
-                    </svg>
+                <button class="delete-btn">
+                    <span class="material-symbols-outlined">delete</span>
                 </button>
-
-                  <!--New Updated Version of Delete Btn End Here--> 
             </div>
-        </div>
+            
+            </div>
+          </div>
+        </a>
+      <% } %>
     </div>
-    </a>
- <%} %>
-  </div>
+  </section>
+  <!-- Right Section for total price checkout  -->  
 </div>
 
 <script type="module" src="/javascript/watchlist.js" defer></script>
